@@ -773,7 +773,7 @@ namespace fim
  * One glorious day these macros will serve to build automatically documentation.
  * */
 #define FIM_CMD_HELP_ALIGN FIM_FLT_ALIGN " bottom : align to the lower side the current image; " FIM_FLT_ALIGN " top : align to the upper side the current image; "
-#define FIM_CMD_HELP_LIST	FIM_FLT_LIST " : display the files list; " FIM_FLT_LIST " random_shuffle: randomly shuffle the file list; " FIM_FLT_LIST " reverse: reverse the file list; " FIM_FLT_LIST " sort: sort the file list; " FIM_FLT_LIST " pop : pop the last file from the files list; " FIM_FLT_LIST " remove [" FIM_CNS_EX_FNS_STRING "] : remove the current file, or the " FIM_CNS_EX_FNS_STRING ", if specified " "; push " FIM_CNS_EX_FNS_STRING " : push " FIM_CNS_EX_FNS_STRING " to the back of the files list; " FIM_FLT_LIST " filesnum : display the number of files in the files list; " FIM_FLT_LIST " mark : mark the current file for stdout printing at exit; " FIM_FLT_LIST " unmark : unmark the current file, preventing from stdout printing at exit; " FIM_FLT_LIST " pushdir {dirname} : will push all the files in {dirname}, when matching the regular expression in variable " FIM_VID_PUSHDIR_RE " or, if empty, from constant regular expression " FIM_CNS_PUSHDIR_RE " "
+#define FIM_CMD_HELP_LIST	FIM_FLT_LIST " : display the files list; " FIM_FLT_LIST " random_shuffle: randomly shuffle the file list; " FIM_FLT_LIST " reverse: reverse the file list; " FIM_FLT_LIST " sort: sort the file list; " FIM_FLT_LIST " pop : pop the last file from the files list; " FIM_FLT_LIST " remove [" FIM_CNS_EX_FNS_STRING "] : remove the current file, or the " FIM_CNS_EX_FNS_STRING ", if specified " "; push " FIM_CNS_EX_FNS_STRING " : push " FIM_CNS_EX_FNS_STRING " to the back of the files list; " FIM_FLT_LIST " filesnum : display the number of files in the files list; " FIM_FLT_LIST " mark : mark the current file for stdout printing at exit; " FIM_FLT_LIST " unmark : unmark the current file, preventing from stdout printing at exit; " FIM_FLT_LIST " pushdir {dirname} : will push all the files in {dirname}, when matching the regular expression in variable " FIM_VID_PUSHDIR_RE " or, if empty, from constant regular expression " FIM_CNS_PUSHDIR_RE "; " FIM_FLT_LIST " pushdirr {dirname} : like pushdir, but will also push encountered directory entries recursively. "
 #define FIM_CMD_HELP_CD			FIM_FLT_CD " " FIM_CNS_EX_PATH_STRING ": change the current directory to " FIM_CNS_EX_PATH_STRING ". " FIM_FLT_CD " - will change to the previous current directory (before the last \":" FIM_FLT_CD " " FIM_CNS_EX_PATH_STRING "\" command)"
 #define FIM_CMD_HELP_SET			FIM_FLT_SET ": returns a list of variables which are set; " FIM_FLT_SET " " FIM_CNS_EX_ID_STRING ": returns the value of variable " FIM_CNS_EX_ID_STRING "; " FIM_FLT_SET " " FIM_CNS_EX_ID_STRING " " FIM_CNS_EX_CMDS_STRING ": sets variable " FIM_CNS_EX_ID_STRING " to value " FIM_CNS_EX_CMDS_STRING "; " 
 #define FIM_CMD_HELP_PWD			FIM_FLT_PWD" : print the current directory name, and updates the " FIM_VID_PWD " variable"
